# aafactory

./: .env.sample  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
aafactory/src/aafactory/: configuration.py  create_gradio_ui.py  main.py  schemas.py  settings.py  style.py
aafactory/src/aafactory/act/: interface.py
aafactory/src/aafactory/avatar/: interface.py
aafactory/src/aafactory/chat/: interface.py
aafactory/src/aafactory/comfyui/: video.py
aafactory/src/aafactory/database/: manage_db.py
aafactory/src/aafactory/fetcher/: fetching.py
aafactory/src/aafactory/react/: interface.py
aafactory/src/aafactory/utils/: interface.py  voice.py
aafactory/src/tests/: test_configuration.py
aafactory/src/tests/test_chat/: test_chat_interface.py  test_mock_chat.py
aafactory/src/tests/test_database/: test_manage_db.py
aafactory/workflows/: audio_image_to_video.json  audio_image_to_video_with_sonic.json  text_to_speech_with_zonos.json  text_to_text_with_ollama.json
autonomus_social_media_avatar/datasets/: start_environment_v1.json
autonomus_social_media_avatar/src/autonomus_social_media_avatar/: configuration.py  create_gradio_ui.py  main.py  prompts.py  settings.py  simulation.py  style.py
autonomus_social_media_avatar/src/autonomus_social_media_avatar/act/: interface.py
autonomus_social_media_avatar/src/autonomus_social_media_avatar/avatar/: acting.py  interface.py
autonomus_social_media_avatar/src/autonomus_social_media_avatar/chat/: interface.py
autonomus_social_media_avatar/src/autonomus_social_media_avatar/comfyui/: video.py
autonomus_social_media_avatar/src/autonomus_social_media_avatar/database/: manage_db.py
autonomus_social_media_avatar/src/autonomus_social_media_avatar/fetcher/: environment_objects.py  fetching.py
autonomus_social_media_avatar/src/autonomus_social_media_avatar/narrator/: narration.py  retriever.py
autonomus_social_media_avatar/src/autonomus_social_media_avatar/react/: interface.py
autonomus_social_media_avatar/src/autonomus_social_media_avatar/simulator/: create_mock_data_with_local_model.py  create_mock_data_with_openai.py  generate_grammar.py  mock_data.json  pydantic_models_to_grammar.py
autonomus_social_media_avatar/src/autonomus_social_media_avatar/simulator/avatar/: avatar_simulation.py
autonomus_social_media_avatar/src/autonomus_social_media_avatar/simulator/database/: simulation_db.py
autonomus_social_media_avatar/src/autonomus_social_media_avatar/simulator/environment/: environment_simulation.py
autonomus_social_media_avatar/src/autonomus_social_media_avatar/simulator/media/: voice.py
autonomus_social_media_avatar/src/autonomus_social_media_avatar/simulator/narrator/: narrator_simulation.py
autonomus_social_media_avatar/src/autonomus_social_media_avatar/simulator/ui/: avatar_history.py  avatar_profile.py  main_dashboard.py  settings.py
autonomus_social_media_avatar/src/autonomus_social_media_avatar/utils/: voice.py
autonomus_social_media_avatar/workflows/: audio_image_to_video.json
cloud_setup/: pyproject.toml
cloud_setup/joyvasa/: setup_joyvasa.sh
cloud_setup/runpod_templates/comfy_ui/: 2025-04-26_11-26-04_snapshot.json  Dockerfile  README.md  docker-compose.yml  server-requirements.txt  start.sh
cloud_setup/sonic/: install_sonic.sh  pyproject.toml
cloud_setup/zonos/: pyproject.toml
experiments/comfyui/: README.md  api_example.py
