[project]
name = "workspace"
version = "0.1.0"
description = ""
authors = [{ name = "Reekomer" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "torchvision==0.19.0",
    "accelerate==0.33.0",
    "aiohttp>=3.10.7",
    "aiosignal==1.3.1",
    "anyio==4.2.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==2.4.1",
    "async-lru==2.0.4",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "babel==2.14.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.1.0",
    "build==1.2.1",
    "cachecontrol==0.14.0",
    "certifi==2022.12.7",
    "cffi==1.16.0",
    "charset-normalizer==2.1.1",
    "cleo==2.1.0",
    "cmake==3.25.0",
    "comm==0.2.1",
    "crashtest==0.4.1",
    "cryptography==43.0.0",
    "debugpy==1.8.0",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "distlib==0.3.8",
    "dulwich==0.21.7",
    "einops==0.7.0",
    "entrypoints==0.4",
    "exceptiongroup==1.2.0",
    "executing==2.0.1",
    "fastjsonschema==2.19.1",
    "filelock==3.15.4",
    "fqdn==1.5.1",
    "frozenlist==1.4.1",
    "fsspec==2024.2.0",
    "gdown==5.1.0",
    "gitdb==4.0.11",
    "gitpython==3.1.41",
    "h11==0.14.0",
    "httpcore==1.0.2",
    "httpx==0.26.0",
    "huggingface-hub==0.24.5",
    "idna==3.4",
    "importlib-metadata==8.2.0",
    "installer==0.7.0",
    "isoduration==20.11.0",
    "jaraco-classes==3.4.0",
    "jedi==0.19.1",
    "jeepney==0.8.0",
    "jinja2==3.1.2",
    "json5==0.9.14",
    "jsonpointer==2.4",
    "jsonschema==4.21.1",
    "jsonschema-specifications==2023.12.1",
    "keyring==24.3.1",
    "lit==15.0.7",
    "lxml==5.1.0",
    "markupsafe==2.1.3",
    "matplotlib-inline==0.1.6",
    "matrix-client==0.4.0",
    "mistune==3.0.2",
    "more-itertools==10.4.0",
    "mpmath==1.3.0",
    "msgpack==1.0.8",
    "multidict==6.0.5",
    "nbclassic==1.0.0",
    "nbclient==0.9.0",
    "nbconvert==7.15.0",
    "nbformat==5.9.2",
    "nest-asyncio==1.6.0",
    "networkx==3.2.1",
    "numpy==1.26.3",
    "overrides==7.7.0",
    "packaging==23.2",
    "pandocfilters==1.5.1",
    "parso==0.8.3",
    "pexpect==4.9.0",
    "pillow==10.2.0",
    "pkginfo==1.11.1",
    "platformdirs==4.2.0",
    "poetry-core==1.9.0",
    "prometheus-client==0.19.0",
    "prompt-toolkit==3.0.43",
    "protobuf==5.27.3",
    "psutil==5.9.8",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pycparser==2.21",
    "pygments==2.17.2",
    "pysocks==1.7.1",
    "python-dateutil==2.8.2",
    "pyyaml==6.0.1",
    "pyzmq==24.0.1",
    "scipy==1.12.0",
    "torch==2.4.0",
    "transformers>=4.48.1",
    "triton==3.0.0",
    "xformers==0.0.27.post2",
    "torchsde>=0.2.6",
    "opencv-python>=4.11.0.86",
    "jupyterlab-server==2.25.2",
    "jupyterlab==4.1.0",
    "omegaconf>=2.3.0",
    "diffusers>=0.32.2",
    "imageio>=2.37.0",
    "kanjize>=1.5.0",
    "soundfile>=0.13.1",
    "kornia>=0.8.0",
    "av>=14.2.0",
    "spandrel>=0.4.1",

]

[build-system]
requires = ["setuptools", "wheel"]
